create UI champions list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="champion">champion</string>
     <string name="text_class">class</string>
     <string name="favorite">favorite</string>
-    <string name="search">Search Hero</string>
+    <string name="search">Search</string>
 </resources>
