Create UI detail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,19 @@
     <string name="text_class">class</string>
     <string name="favorite">favorite</string>
     <string name="search">Search</string>
+    <string name="health">Health</string>
+    <string name="regen">Health Regen</string>
+    <string name="range">Range</string>
+    <string name="movement">Movement</string>
+    <string name="attack">Attack</string>
+    <string name="attack_speed">Attack Speed</string>
+    <string name="armor">Armor</string>
+    <string name="health_regen">Health Regen</string>
+    <string name="defense">Defense</string>
+    <string name="magic">Magic</string>
+    <string name="difficulty">Difficulty</string>
+    <string name="abilities">Abilities</string>
+    <string name="lore">Lore</string>
+    <string name="skin">Skin</string>
+    <string name="magic_resist">Magic Resist</string>
 </resources>
